src/main/java/org/swdc/expression/el/antlr/ElExpressionParser.java
package org.swdc.expression.el.antlr;
// Generated from ElExpression.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ElExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, WORD=2, NUM=3, DOT=4, DQUOT=5, QUOT=6, PLUS=7, REDC=8, MULT=9, DEV=10, 
		EVAL=11, BL=12, BR=13, AL=14, AR=15, SL=16, SR=17, OR=18, AND=19, NOR=20, 
		EQ=21, GT=22, GTEQ=23, LT=24, LTEQ=25, NOTEQ=26, TRUE=27, FALSE=28;
	public static final int
		RULE_var = 0, RULE_varUnit = 1, RULE_nums = 2, RULE_bool = 3, RULE_arrayIndexed = 4, 
		RULE_objectProperty = 5, RULE_objectVar = 6, RULE_basicCalcuteExpr = 7, 
		RULE_calcutable = 8, RULE_basicWithScope = 9, RULE_logicCompare = 10, 
		RULE_logicalcutable = 11, RULE_logicExpr = 12, RULE_evalable = 13, RULE_evalablePart = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"var", "varUnit", "nums", "bool", "arrayIndexed", "objectProperty", "objectVar", 
			"basicCalcuteExpr", "calcutable", "basicWithScope", "logicCompare", "logicalcutable", 
			"logicExpr", "evalable", "evalablePart"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'.'", "'\"'", "'''", "'+'", "'-'", null, null, 
			"'$'", "'{'", "'}'", "'['", "']'", "'('", "')'", "'|'", "'&'", "'!'", 
			"'=='", "'>'", "'>='", "'<'", "'<='", "'!='", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "WORD", "NUM", "DOT", "DQUOT", "QUOT", "PLUS", "REDC", "MULT", 
			"DEV", "EVAL", "BL", "BR", "AL", "AR", "SL", "SR", "OR", "AND", "NOR", 
			"EQ", "GT", "GTEQ", "LT", "LTEQ", "NOTEQ", "TRUE", "FALSE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ElExpression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ElExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class VarContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(ElExpressionParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(ElExpressionParser.WORD, i);
		}
		public List<TerminalNode> NUM() { return getTokens(ElExpressionParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(ElExpressionParser.NUM, i);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(WORD);
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WORD || _la==NUM) {
				{
				{
				setState(31);
				_la = _input.LA(1);
				if ( !(_la==WORD || _la==NUM) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarUnitContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public List<TerminalNode> DQUOT() { return getTokens(ElExpressionParser.DQUOT); }
		public TerminalNode DQUOT(int i) {
			return getToken(ElExpressionParser.DQUOT, i);
		}
		public List<TerminalNode> QUOT() { return getTokens(ElExpressionParser.QUOT); }
		public TerminalNode QUOT(int i) {
			return getToken(ElExpressionParser.QUOT, i);
		}
		public VarUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterVarUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitVarUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitVarUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarUnitContext varUnit() throws RecognitionException {
		VarUnitContext _localctx = new VarUnitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varUnit);
		try {
			setState(46);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				var();
				}
				break;
			case DQUOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				match(DQUOT);
				setState(39);
				var();
				setState(40);
				match(DQUOT);
				}
				break;
			case QUOT:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				match(QUOT);
				setState(43);
				var();
				setState(44);
				match(QUOT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumsContext extends ParserRuleContext {
		public List<TerminalNode> NUM() { return getTokens(ElExpressionParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(ElExpressionParser.NUM, i);
		}
		public TerminalNode DOT() { return getToken(ElExpressionParser.DOT, 0); }
		public NumsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nums; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterNums(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitNums(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitNums(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumsContext nums() throws RecognitionException {
		NumsContext _localctx = new NumsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nums);
		try {
			setState(52);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(NUM);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				match(NUM);
				{
				setState(50);
				match(DOT);
				setState(51);
				match(NUM);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(ElExpressionParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(ElExpressionParser.FALSE, 0); }
		public BoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitBool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolContext bool() throws RecognitionException {
		BoolContext _localctx = new BoolContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bool);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayIndexedContext extends ParserRuleContext {
		public TerminalNode AL() { return getToken(ElExpressionParser.AL, 0); }
		public NumsContext nums() {
			return getRuleContext(NumsContext.class,0);
		}
		public TerminalNode AR() { return getToken(ElExpressionParser.AR, 0); }
		public ArrayIndexedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayIndexed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterArrayIndexed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitArrayIndexed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitArrayIndexed(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayIndexedContext arrayIndexed() throws RecognitionException {
		ArrayIndexedContext _localctx = new ArrayIndexedContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arrayIndexed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(AL);
			setState(57);
			nums();
			setState(58);
			match(AR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectPropertyContext extends ParserRuleContext {
		public TerminalNode AL() { return getToken(ElExpressionParser.AL, 0); }
		public VarUnitContext varUnit() {
			return getRuleContext(VarUnitContext.class,0);
		}
		public TerminalNode AR() { return getToken(ElExpressionParser.AR, 0); }
		public TerminalNode DOT() { return getToken(ElExpressionParser.DOT, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public ObjectPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterObjectProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitObjectProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitObjectProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectPropertyContext objectProperty() throws RecognitionException {
		ObjectPropertyContext _localctx = new ObjectPropertyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_objectProperty);
		try {
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AL:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				match(AL);
				setState(61);
				varUnit();
				setState(62);
				match(AR);
				}
				break;
			case DOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				match(DOT);
				setState(65);
				var();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectVarContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public List<ObjectPropertyContext> objectProperty() {
			return getRuleContexts(ObjectPropertyContext.class);
		}
		public ObjectPropertyContext objectProperty(int i) {
			return getRuleContext(ObjectPropertyContext.class,i);
		}
		public List<ArrayIndexedContext> arrayIndexed() {
			return getRuleContexts(ArrayIndexedContext.class);
		}
		public ArrayIndexedContext arrayIndexed(int i) {
			return getRuleContext(ArrayIndexedContext.class,i);
		}
		public ObjectVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterObjectVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitObjectVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitObjectVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectVarContext objectVar() throws RecognitionException {
		ObjectVarContext _localctx = new ObjectVarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_objectVar);
		int _la;
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				var();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				var();
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(72);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(70);
						objectProperty();
						}
						break;
					case 2:
						{
						setState(71);
						arrayIndexed();
						}
						break;
					}
					}
					setState(74); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==DOT || _la==AL );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicCalcuteExprContext extends ParserRuleContext {
		public Token op;
		public List<BasicWithScopeContext> basicWithScope() {
			return getRuleContexts(BasicWithScopeContext.class);
		}
		public BasicWithScopeContext basicWithScope(int i) {
			return getRuleContext(BasicWithScopeContext.class,i);
		}
		public List<TerminalNode> MULT() { return getTokens(ElExpressionParser.MULT); }
		public TerminalNode MULT(int i) {
			return getToken(ElExpressionParser.MULT, i);
		}
		public List<TerminalNode> DEV() { return getTokens(ElExpressionParser.DEV); }
		public TerminalNode DEV(int i) {
			return getToken(ElExpressionParser.DEV, i);
		}
		public BasicCalcuteExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicCalcuteExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterBasicCalcuteExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitBasicCalcuteExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitBasicCalcuteExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasicCalcuteExprContext basicCalcuteExpr() throws RecognitionException {
		BasicCalcuteExprContext _localctx = new BasicCalcuteExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_basicCalcuteExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			basicWithScope();
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MULT || _la==DEV) {
				{
				{
				setState(79);
				((BasicCalcuteExprContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==MULT || _la==DEV) ) {
					((BasicCalcuteExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(80);
				basicWithScope();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CalcutableContext extends ParserRuleContext {
		public Token op;
		public List<BasicCalcuteExprContext> basicCalcuteExpr() {
			return getRuleContexts(BasicCalcuteExprContext.class);
		}
		public BasicCalcuteExprContext basicCalcuteExpr(int i) {
			return getRuleContext(BasicCalcuteExprContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(ElExpressionParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(ElExpressionParser.PLUS, i);
		}
		public List<TerminalNode> REDC() { return getTokens(ElExpressionParser.REDC); }
		public TerminalNode REDC(int i) {
			return getToken(ElExpressionParser.REDC, i);
		}
		public CalcutableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calcutable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterCalcutable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitCalcutable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitCalcutable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CalcutableContext calcutable() throws RecognitionException {
		CalcutableContext _localctx = new CalcutableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_calcutable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			basicCalcuteExpr();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS || _la==REDC) {
				{
				{
				setState(87);
				((CalcutableContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==REDC) ) {
					((CalcutableContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(88);
				basicCalcuteExpr();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicWithScopeContext extends ParserRuleContext {
		public TerminalNode SL() { return getToken(ElExpressionParser.SL, 0); }
		public CalcutableContext calcutable() {
			return getRuleContext(CalcutableContext.class,0);
		}
		public TerminalNode SR() { return getToken(ElExpressionParser.SR, 0); }
		public NumsContext nums() {
			return getRuleContext(NumsContext.class,0);
		}
		public ObjectVarContext objectVar() {
			return getRuleContext(ObjectVarContext.class,0);
		}
		public BasicWithScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicWithScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterBasicWithScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitBasicWithScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitBasicWithScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasicWithScopeContext basicWithScope() throws RecognitionException {
		BasicWithScopeContext _localctx = new BasicWithScopeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_basicWithScope);
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SL:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				match(SL);
				setState(95);
				calcutable();
				setState(96);
				match(SR);
				}
				break;
			case WORD:
			case NUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NUM:
					{
					setState(98);
					nums();
					}
					break;
				case WORD:
					{
					setState(99);
					objectVar();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicCompareContext extends ParserRuleContext {
		public Token op;
		public List<CalcutableContext> calcutable() {
			return getRuleContexts(CalcutableContext.class);
		}
		public CalcutableContext calcutable(int i) {
			return getRuleContext(CalcutableContext.class,i);
		}
		public TerminalNode GT() { return getToken(ElExpressionParser.GT, 0); }
		public TerminalNode GTEQ() { return getToken(ElExpressionParser.GTEQ, 0); }
		public TerminalNode LT() { return getToken(ElExpressionParser.LT, 0); }
		public TerminalNode LTEQ() { return getToken(ElExpressionParser.LTEQ, 0); }
		public TerminalNode NOTEQ() { return getToken(ElExpressionParser.NOTEQ, 0); }
		public TerminalNode EQ() { return getToken(ElExpressionParser.EQ, 0); }
		public LogicCompareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicCompare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterLogicCompare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitLogicCompare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitLogicCompare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicCompareContext logicCompare() throws RecognitionException {
		LogicCompareContext _localctx = new LogicCompareContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_logicCompare);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			calcutable();
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQ:
				{
				setState(105);
				((LogicCompareContext)_localctx).op = match(EQ);
				}
				break;
			case GT:
				{
				setState(106);
				match(GT);
				}
				break;
			case GTEQ:
				{
				setState(107);
				match(GTEQ);
				}
				break;
			case LT:
				{
				setState(108);
				match(LT);
				}
				break;
			case LTEQ:
				{
				setState(109);
				match(LTEQ);
				}
				break;
			case NOTEQ:
				{
				setState(110);
				match(NOTEQ);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(113);
			calcutable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalcutableContext extends ParserRuleContext {
		public Token op;
		public List<LogicExprContext> logicExpr() {
			return getRuleContexts(LogicExprContext.class);
		}
		public LogicExprContext logicExpr(int i) {
			return getRuleContext(LogicExprContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(ElExpressionParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(ElExpressionParser.OR, i);
		}
		public List<TerminalNode> AND() { return getTokens(ElExpressionParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(ElExpressionParser.AND, i);
		}
		public TerminalNode NOR() { return getToken(ElExpressionParser.NOR, 0); }
		public LogicalcutableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalcutable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).enterLogicalcutable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElExpressionListener ) ((ElExpressionListener)listener).exitLogicalcutable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElExpressionVisitor ) return ((ElExpressionVisitor<? extends T>)visitor).visitLogicalcutable(this);
			else return visitor.visitChildren(this);
		}
	}
